# AutoTrader

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  _check_db.py  config.py  main.py  pyproject.toml
evolution/: evaluator.py  generator.py  loop_detector.py  meta.py  orchestrator.py
exchange/: connector.py  paper.py
knowledge/: store.py
strategy/: runner.py  template.py
tests/: conftest.py  test_binance_connector.py  test_evaluator.py  test_llm_generation.py  test_paper_exchange.py  test_timeframe.py
